tests/compile_fail/ktstr_test_cores_zero.rs
use ktstr::ktstr_test;

#[ktstr_test(cores = 0)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
